--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -26,7 +26,7 @@
             <h3>history</h3>
             <hr style="height:1px;border:none;border-top:1px solid #555555;" />
             {% for line in namels %}
-                <li>{{ line }}</li>
+                <li><a href="{% url 'sample:index' %}?name={{ line }}">{{ line }}</a></li>
             {% endfor %}
         </td>
     <td>
