--- a/mysite/templates/input.html
+++ b/mysite/templates/input.html
@@ -26,11 +26,11 @@
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="index.html" class="logo">
+    <a href="/welcome" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>主页</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Admin</b>LTE</span>
+      <span class="logo-lg"><b>主页</b></span>
     </a>
 
     <!-- Header Navbar -->
@@ -58,7 +58,7 @@
                     <a href="#">
                       <div class="pull-left">
                         <!-- User Image -->
-                        <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
                       </div>
                       <!-- Message title and timestamp -->
                       <h4>
@@ -143,14 +143,14 @@
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="/static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="/static/dist/img/admin.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">管理员</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -200,32 +200,32 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>管理员</p>
           <!-- Status -->
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
         </div>
       </div>
 
       <!-- search form (Optional) -->
       <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
+        <!--<div class="input-group">
           <input type="text" name="q" class="form-control" placeholder="Search...">
           <span class="input-group-btn">
               <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
               </button>
             </span>
-        </div>
+        </div>-->
       </form>
       <!-- /.search form -->
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">HEADER</li>
+        <li class="header">选项</li>
         <!-- Optionally, you can add icons to the links -->
-        <li class="active"><a href="/crawl"><i class="fa fa-link"></i> <span>查看人物网页信息</span></a></li>
+        <li class="active"><a href="/crawl"><i class="fa fa-link"></i> <span>搜索人物网页信息</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>选择数据源</span>
             <span class="pull-right-container">
@@ -265,10 +265,10 @@
         人物信息聚合系统
         <small>version 1.0</small>
       </h1>
-      <ol class="breadcrumb">
+      <!--<ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
         <li class="active">Here</li>
-      </ol>
+      </ol>-->
     </section>
 
     <!-- Main content -->
@@ -378,7 +378,7 @@ function genData() {
             temp2.push(temp3.slice(0,1));
         }
         seriesData.push({
-            name: temp2,
+            name: i+1 + ': ' + temp2,
             value: legendData[i]
         });
         selected[name] = i < legendData.length;
@@ -463,22 +463,23 @@ function genData() {
   <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-      Anything you want
+
     </div>
     <!-- Default to the left -->
     <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Create the tabs -->
+  <!-- Control Sidebar -->
+  <!--<aside class="control-sidebar control-sidebar-dark">
+
     <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
       <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
       <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
     </ul>
-    <!-- Tab panes -->
+
     <div class="tab-content">
-      <!-- Home tab content -->
+
       <div class="tab-pane active" id="control-sidebar-home-tab">
         <h3 class="control-sidebar-heading">Recent Activity</h3>
         <ul class="control-sidebar-menu">
@@ -494,7 +495,7 @@ function genData() {
             </a>
           </li>
         </ul>
-        <!-- /.control-sidebar-menu -->
+
 
         <h3 class="control-sidebar-heading">Tasks Progress</h3>
         <ul class="control-sidebar-menu">
@@ -513,14 +514,12 @@ function genData() {
             </a>
           </li>
         </ul>
-        <!-- /.control-sidebar-menu -->
+
 
       </div>
-      <!-- /.tab-pane -->
-      <!-- Stats tab content -->
+
       <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div>
-      <!-- /.tab-pane -->
-      <!-- Settings tab content -->
+
       <div class="tab-pane" id="control-sidebar-settings-tab">
         <form method="post">
           <h3 class="control-sidebar-heading">General Settings</h3>
@@ -535,12 +534,13 @@ function genData() {
               Some information about this general settings option
             </p>
           </div>
-          <!-- /.form-group -->
+
         </form>
       </div>
-      <!-- /.tab-pane -->
+
     </div>
-  </aside>
+
+  </aside>-->
   <!-- /.control-sidebar -->
   <!-- Add the sidebar's background. This div must be placed
   immediately after the control sidebar -->
