--- a/mysite/templates/welcome.html
+++ b/mysite/templates/welcome.html
@@ -26,9 +26,9 @@
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="welcome/" class="logo">
+    <a href="/welcome" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>主页</b></span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>主页</b></span>
     </a>
@@ -58,7 +58,7 @@
                     <a href="#">
                       <div class="pull-left">
                         <!-- User Image -->
-                        <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
                       </div>
                       <!-- Message title and timestamp -->
                       <h4>
@@ -143,14 +143,14 @@
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="/static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="/static/dist/img/admin.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">管理员</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -200,12 +200,12 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="/static/dist/img/admin.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>管理员</p>
           <!-- Status -->
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
         </div>
       </div>
 
@@ -223,7 +223,7 @@
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">HEADER</li>
+        <li class="header">选项</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="/crawl"><i class="fa fa-link"></i> <span>搜索人物网页信息</span></a></li>
         <li class="treeview">
@@ -265,10 +265,11 @@
         人物信息聚合系统
         <small>version 1.0</small>
       </h1>
-      <ol class="breadcrumb">
+      <span style="color:blue;font-size:60px">欢迎使用人物信息聚合系统！</span>
+      <!--<ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
         <li class="active">Here</li>
-      </ol>
+      </ol>-->
     </section>
 
     <!-- Main content -->
@@ -281,22 +282,22 @@
   <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-      Anything you want
+
     </div>
     <!-- Default to the left -->
     <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Create the tabs -->
+  <!--<aside class="control-sidebar control-sidebar-dark">
+
     <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
       <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
       <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
     </ul>
-    <!-- Tab panes -->
+
     <div class="tab-content">
-      <!-- Home tab content -->
+
       <div class="tab-pane active" id="control-sidebar-home-tab">
         <h3 class="control-sidebar-heading">Recent Activity</h3>
         <ul class="control-sidebar-menu">
@@ -312,7 +313,7 @@
             </a>
           </li>
         </ul>
-        <!-- /.control-sidebar-menu -->
+
 
         <h3 class="control-sidebar-heading">Tasks Progress</h3>
         <ul class="control-sidebar-menu">
@@ -331,14 +332,12 @@
             </a>
           </li>
         </ul>
-        <!-- /.control-sidebar-menu -->
+
 
       </div>
-      <!-- /.tab-pane -->
-      <!-- Stats tab content -->
+
       <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div>
-      <!-- /.tab-pane -->
-      <!-- Settings tab content -->
+
       <div class="tab-pane" id="control-sidebar-settings-tab">
         <form method="post">
           <h3 class="control-sidebar-heading">General Settings</h3>
@@ -353,12 +352,13 @@
               Some information about this general settings option
             </p>
           </div>
-          <!-- /.form-group -->
+
         </form>
       </div>
-      <!-- /.tab-pane -->
+
     </div>
-  </aside>
+
+  </aside>-->
   <!-- /.control-sidebar -->
   <!-- Add the sidebar's background. This div must be placed
   immediately after the control sidebar -->
