--- a/mysite/templates/file.html
+++ b/mysite/templates/file.html
@@ -107,6 +107,7 @@
             <li><a href="/input">手动输入</a></li>
           </ul>
         </li>
+      <li class="active"><a href="/autocrawl"><i class="fa fa-link"></i> <span>自动爬取人物信息</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>历史记录</span>
             <span class="pull-right-container">
