--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -107,6 +107,7 @@
             <li><a href="/input">手动输入</a></li>
           </ul>
         </li>
+      <li class="active"><a href="/autocrawl"><i class="fa fa-link"></i> <span>自动爬取人物信息</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>历史记录</span>
             <span class="pull-right-container">
@@ -225,7 +226,8 @@ function genData() {
 
                 <!-- Horizontal Form -->
 
-        <h1>网页结果</h1>
+        <h1>网页结果<small>({{ peoplename }})</small></h1>
+
     <table border="1" class="table table-bordered">
            <thead>
                <th>聚合结果</th>
