--- a/mysite/templates/autocrawl.html
+++ b/mysite/templates/autocrawl.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>人物信息聚合系统</title>
+<title>人物信息子聚合系统</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link href="" rel="stylesheet">
@@ -133,7 +133,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        人物信息聚合系统
+        人物信息聚合子系统
         <small>version 1.0</small>
       </h1>
       <!--<ol class="breadcrumb">
