--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -595,20 +595,42 @@ function genData(h) {
 
            </tbody>
     </table>
-    <h3>未使用网页（网页相关信息较少）</h3>
-    <table border="1" class="table table-bordered">
-           <tbody>
-           　　{% for line in unuse %}
-                   <tr>
-                       <td> {{ line | urlize }}</td>
-                   </tr>
-               {% endfor %}
-           </tbody>
-    </table>
+
       <!--------------------------
         | Your Page Content Here |
         -------------------------->
 
+    <div class="box box-primary">
+            <div class="box-header with-border">
+              <h3 class="box-title">未使用网页（网页相关信息较少）</h3>
+            </div>
+              <form action="?name='changecluster'&peoplename={{ peoplename }}" method="post">
+              <div class="box-body">
+                  <div class="form-group">
+                      {% for line in unuse %}
+                          <div class="checkbox">
+                          <label>
+                            <input type="checkbox" value="{{ line.unuseid }}" name="unuseidlist">
+                                {{ line.unuseip | urlize }}
+                          </label>
+                          </div>
+                      {% endfor %}
+
+                </div>
+              <div class="form-group">
+                  <label for="clusterno" class="col-sm-2 control-label">所属聚合结果</label>
+
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="clusterno" value="" name="clustersno">
+                  </div>
+                </div>
+
+              </div>
+              <div class="box-footer">
+                <button type="submit" class="btn btn-primary">提交</button>
+              </div>
+              </form>
+          </div>
     </section>
     <!-- /.content -->
   </div>
